styles.css
@font-face {
  font-display: swap;
  font-family: "Roboto";
  font-style: normal;
  font-weight: 300;
  src: url("./fonts/Roboto-Light.ttf") format("truetype");
}
@font-face {
  font-display: swap;
  font-family: "Roboto";
  font-style: normal;
  font-weight: 400;
  src: url("./fonts/Roboto-Regular.ttf") format("truetype");
}
@font-face {
  font-display: swap;
  font-family: "Roboto";
  font-style: normal;
  font-weight: 700;
  src: url("./fonts/Roboto-Bold.ttf") format("truetype");
}
:root {
  /* Colors */
  /* Dark */
  --color-background: #333333;
  --color-background-opacity: rgba(35, 35, 35, 0.8);
  --color-accent: #dd8b5f;
  --color-text: #ffffff;
  --color-text-secondary: #000000;
  --color-black: #ababab;
  --color-white: #ffffff;
  /* Light */
  --color-light-background: #ffffff;
  --color-light-background-opacity: rgba(135, 135, 135, 0.8);
  --color-light-accent: #dd8b5f;
  --color-light-text: #000000;
  --color-light-text-secondary: #ffffff;
  --color-light-black: #000000;
  --color-light-white: #ffffff;
  /* Text sizes */
  --text-size-xxxl: 7.594rem;
  --text-size-xxl: 5.063rem;
  --text-size-xl: 3.375rem;
  --text-size-l: 2.25rem;
  --text-size-m: 1.5rem;
  --text-size-s: 1rem;
  --text-size-xs: 0.667rem;
  /* Font sizes */
  --font-weight-light: 300;
  --font-weight-normal: 400;
  --font-weight-bold: 700;
  /* Line heights */
  --line-height-s: 1.2;
  --line-height-m: 1.4;
  --line-height-l: 1.6;
  --line-height-xl: 1.8;
  /* Container height for header */
  --nav-bar-height-web: 12rem;
  --nav-bar-height-mobile: fit-content;
  --container-header-height-web: calc(100vh - var(--nav-bar-height-web));
  /* Icons */
  --icon-mail-50: url("./assets/icons/icons8-mail-50.png");
  --icon-mail-50-accent: url("./assets/icons/icons8-mail-50_accent.png");
  --icon-mail-100: url("./assets/icons/icons8-mail-100.png");
  --icon-mail-100-accent: url("./assets/icons/icons8-mail-100_accent.png");
  --icon-github-50: url("./assets/icons/icons8-github-50.png");
  --icon-github-50-accent: url("./assets/icons/icons8-github-50_accent.png");
  --icon-linkedin-50: url("./assets/icons/icons8-linkedin-50.png");
  --icon-linkedin-50-accent: url("./assets/icons/icons8-linkedin-50_accent.png");
}
/* Resets for common styles */
*,
*::before,
*::after {
  border: none;
  box-sizing: border-box;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    scroll-behavior: smooth;
  }
}

html {
  -webkit-text-size-adjust: none; /* for iOS Safari */
  text-size-adjust: none; /* for other mobile browsers */
}
/* Common tyle changes */
body {
  padding: 0;
  margin: 0;
  font-family: "Roboto", sans-serif;
  background-color: var(--color-background);
  color: var(--color-text);
}

:focus:not(:focus-visible) {
  outline: none;
}

menu,
ol,
ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

li {
  list-style: none;
}

img {
  display: block;
  max-width: 100%;
}

a {
  text-decoration: none;
  color: var(--color-text);
  transition: 0.5s;
}

/* Type scale */

h1 {
  font-size: var(--text-size-xxxl);
  font-weight: var(--font-weight-bold);
  margin: 0;
  padding: 0;
}

h2 {
  font-size: var(--text-size-xl);
  font-weight: var(--font-weight-bold);
  margin: 0;
  padding: 0;
  z-index: 999;
}

h3 {
  font-size: var(--text-size-l);
  font-weight: var(--font-weight-normal);
  margin: 0;
  padding: 0;
}

h4 {
  font-size: var(--text-size-s);
  font-weight: var(--font-weight-light);
  margin: 0;
  padding: 0;
  line-height: var(--line-height-md);
}

h5 {
  font-size: var(--text-size-l);
  font-weight: var(--font-weight-normal);
  margin: 0;
  padding: 0;
  line-height: var(--line-height-sm);
}

h6 {
  font-size: var(--text-size-xs);
  font-weight: var(--font-weight-light);
  padding: 0;
  margin: 0.25rem 0 0 0;
  line-height: var(--line-height-s);
}

p {
  font-size: var(--text-size-s);
  font-weight: var(--font-weight-light);
  line-height: var(--line-height-m);
  margin: 0;
  padding: 0;
}

/* Animations */

@keyframes animatedleft {
  0% {
    opacity: 0;
    position: relative;
    left: -500px;
  }

  70% {
    opacity: 0.7;
    position: relative;
    left: 30px;
  }

  80% {
    opacity: 0.9;
    position: relative;
    left: -10px;
  }

  90% {
    opacity: 0.7;
    position: relative;
    left: 10px;
  }

  95% {
    opacity: 0.9;
    position: relative;
    left: -5px;
  }

  100% {
    opacity: 1;
    position: relative;
    left: 0px;
  }
}

@keyframes animatedright {
  0% {
    opacity: 0;
    position: relative;
    left: 500px;
  }

  70% {
    opacity: 0.7;
    position: relative;
    left: -30px;
  }

  80% {
    opacity: 0.9;
    position: relative;
    left: 10px;
  }

  90% {
    opacity: 0.7;
    position: relative;
    left: -10px;
  }

  95% {
    opacity: 0.9;
    position: relative;
    left: 5px;
  }

  100% {
    opacity: 1;
    position: relative;
    left: 0px;
  }
}

.slide-in-left {
  position: relative;
  animation-name: animatedleft;
  animation-duration: 1s;
}

.slide-in-right {
  position: relative;
  animation-name: animatedright;
  animation-duration: 1s;
}

/* Images - Icons */

.logo {
  width: 100%;
  max-width: 450px;
  object-fit: contain;
}

.header-img {
  width: 500px;
}

.project-img {
  width: 100;
  height: 200px;
  object-fit: cover;
  object-position: 0px -20px;
  border-radius: 10px;
}

.icon-navigation {
  display: flex;
  width: 50px;
  height: 50px;
}

.mail-icon {
  background-image: var(--icon-mail-50);
}

.icon-navigation.mail-icon:hover {
  background-image: var(--icon-mail-50-accent);
}

.github-icon {
  background-image: var(--icon-github-50);
}

.icon-navigation.github-icon:hover {
  background-image: var(--icon-github-50-accent);
}

.linkedin-icon {
  background-image: var(--icon-linkedin-50);
}

.icon-navigation.linkedin-icon:hover {
  background-image: var(--icon-linkedin-50-accent);
}
/* ... */

